--- a/flutter_application_intro_mobile/pubspec.yaml
+++ b/flutter_application_intro_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   cloud_firestore: ^5.6.7
+  geolocator: ^14.0.0
 
 dev_dependencies:
   flutter_test:
