--- a/flutter_application_intro_mobile/pubspec.yaml
+++ b/flutter_application_intro_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   cloud_firestore: ^5.6.7
   geolocator: ^14.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
