--- a/flutter_application_intro_mobile/pubspec.yaml
+++ b/flutter_application_intro_mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.7
   geolocator: ^14.0.0
   intl: ^0.20.2
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
